# MinecraftGL

./: .gitignore  CMakeLists.txt  Game.cpp  Game.h  GameEngine.cpp  GameEngine.h  GoatEngine.vcxproj  GoatEngine.vcxproj.filters  MinecraftGL.sln  README.md  compile_commands.json  config.json  main.cpp  minecraftGL.cpp
Assets/Shaders/: SolidStatic.fs  SolidStatic.vs  TextureModel.fs  TextureModel.vs
Common/: CommonHeaders.h  PrimitiveTypes.h
Core/: Block.cpp  Block.h  Component.h  GameEngine.cpp  GameObject.cpp  GameObject.h  Transform.cpp  Transform.h  World.cpp  World.h
Core/Block/: Block.cpp  Block.h
Core/Chunk/: Chunk.cpp  Chunk.h  Chunklet.cpp  Chunklet.h  ChunksManager.cpp  ChunksManager.h
Core/Generator/: Generator.cpp  Generator.h
GameEngine/: Component.cpp  GameEngine.h
MinecraftSublime/: CMakeLists.txt
MinecraftSublime/src/: GameEngine.h
MinecraftSublime/src/helpers/: RootDir.h.in
MinecraftSublime/src/rendering/: RenderEngine.cpp
Rendering/: Camera.cpp  Camera.h  Mesh.cpp  Mesh.h  MeshRenderer.cpp  MeshRenderer.h  RenderEngine.cpp  RenderEngine.h  SolidRenderer.cpp  SolidRenderer.h
Util/: Singleton.hpp
include/: stb_image.h
include/GL/: glew.h
include/GLFW/: glfw3.h
include/glm/: manual.md  readme.md
res/shaders/: flatShader.fs  skyShader.fs  skyShader.vs  solidShader.fs  solidShader.vs  waterShader.fs  waterShader.vs
src/: GameEngine.cpp  GameEngine.h  craftGL.cpp  game.cc  game.h  game_engine.cc  game_engine.h  main.cc
src/config/: config.cc  config.h
src/gameStateMachine/: GameStateManager.cpp  GameStateManager.h  game_state_manager.cc  game_state_manager.h
src/game_state_machine/: game_state_manager.cc  game_state_manager.h  game_states.h
(+399 files in other folders)
